--- a/sample-kotlin/src/main/res/values/strings.xml
+++ b/sample-kotlin/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name">payjp-android-samplekotlin</string>
+    <string name="app_name">payjp-samplekotlin</string>
 </resources>
