--- a/payjp/src/main/res/values/strings.xml
+++ b/payjp/src/main/res/values/strings.xml
@@ -27,4 +27,8 @@
     <string name="payjp_card_form_expiration_label">Expiration date</string>
     <string name="payjp_card_form_cvc_label">CVC</string>
     <string name="payjp_card_form_holder_name_label">Name</string>
+
+    <string name="payjp_card_form_error_no_number">Please enter a card number.</string>
+    <string name="payjp_card_form_error_invalid_number">Please enter a valid card number.</string>
+    <string name="payjp_card_form_error_invalid_brand">Your card\'s brand is not accepted.</string>
 </resources>
