--- a/payjp/src/main/res/values-ja/strings.xml
+++ b/payjp/src/main/res/values-ja/strings.xml
@@ -31,4 +31,6 @@
     <string name="payjp_card_form_error_no_number">カード番号を入力してください</string>
     <string name="payjp_card_form_error_invalid_number">正しいカード番号を入力してください</string>
     <string name="payjp_card_form_error_invalid_brand">カードブランドが有効ではありません</string>
+    <string name="payjp_card_form_error_no_expiration">有効期限を入力してください</string>
+    <string name="payjp_card_form_error_invalid_expiration">正しい有効期限を入力してください</string>
 </resources>
