--- a/payjp/src/main/res/values/strings.xml
+++ b/payjp/src/main/res/values/strings.xml
@@ -31,4 +31,6 @@
     <string name="payjp_card_form_error_no_number">Please enter a card number.</string>
     <string name="payjp_card_form_error_invalid_number">Please enter a valid card number.</string>
     <string name="payjp_card_form_error_invalid_brand">Your card\'s brand is not accepted.</string>
+    <string name="payjp_card_form_error_no_expiration">Please enter a card expiration.</string>
+    <string name="payjp_card_form_error_invalid_expiration">Please enter a valid card expiration.</string>
 </resources>
