--- a/payjp/src/main/res/values/strings.xml
+++ b/payjp/src/main/res/values/strings.xml
@@ -33,4 +33,6 @@
     <string name="payjp_card_form_error_invalid_brand">Your card\'s brand is not accepted.</string>
     <string name="payjp_card_form_error_no_expiration">Please enter a card expiration.</string>
     <string name="payjp_card_form_error_invalid_expiration">Please enter a valid card expiration.</string>
+    <string name="payjp_card_form_error_no_cvc">Please enter a card cvc.</string>
+    <string name="payjp_card_form_error_invalid_cvc">Please enter a valid card cvc.</string>
 </resources>
