Show holder name error.

--- a/payjp/src/main/res/values/strings.xml
+++ b/payjp/src/main/res/values/strings.xml
@@ -35,4 +35,5 @@
     <string name="payjp_card_form_error_invalid_expiration">Please enter a valid card expiration.</string>
     <string name="payjp_card_form_error_no_cvc">Please enter a card cvc.</string>
     <string name="payjp_card_form_error_invalid_cvc">Please enter a valid card cvc.</string>
+    <string name="payjp_card_form_error_no_holder_name">Please enter a card holder name.</string>
 </resources>
