--- a/sample/src/main/res/values/strings.xml
+++ b/sample/src/main/res/values/strings.xml
@@ -22,5 +22,5 @@
   -->
 
 <resources>
-    <string name="app_name">payjp-samplekotlin</string>
+    <string name="app_name">payjp-sample</string>
 </resources>
