email and phone number UI

--- a/payjp-android-cardform/src/main/res/values-ja/strings.xml
+++ b/payjp-android-cardform/src/main/res/values-ja/strings.xml
@@ -27,6 +27,9 @@
     <string name="payjp_card_form_expiration_label">有効期限 月/年</string>
     <string name="payjp_card_form_cvc_label">セキュリティコード</string>
     <string name="payjp_card_form_holder_name_label">カード名義</string>
+    <string name="payjp_card_form_email_label">メールアドレス</string>
+    <string name="payjp_card_form_phone_number_label">電話番号</string>
+    <string name="payjp_card_form_country_code_label">国番号</string>
 
     <string name="payjp_card_form_error_no_number">カード番号を入力してください</string>
     <string name="payjp_card_form_error_invalid_number">正しいカード番号を入力してください</string>
