--- a/payjp-android-cardform/src/main/res/values/strings.xml
+++ b/payjp-android-cardform/src/main/res/values/strings.xml
@@ -27,6 +27,9 @@
     <string name="payjp_card_form_expiration_label">Expiration date</string>
     <string name="payjp_card_form_cvc_label">Security code</string>
     <string name="payjp_card_form_holder_name_label">Name</string>
+    <string name="payjp_card_form_email_label">Email</string>
+    <string name="payjp_card_form_phone_number_label">Phone number</string>
+    <string name="payjp_card_form_country_code_label">Country</string>
 
     <string name="payjp_card_form_error_no_number">Please enter a card number.</string>
     <string name="payjp_card_form_error_invalid_number">Please enter a valid card number.</string>
