--- a/payjp-android-cardform/src/main/res/values/strings.xml
+++ b/payjp-android-cardform/src/main/res/values/strings.xml
@@ -30,6 +30,8 @@
     <string name="payjp_card_form_email_label">Email</string>
     <string name="payjp_card_form_phone_number_label">Phone number</string>
     <string name="payjp_card_form_country_code_label">Country</string>
+    <string name="payjp_card_form_additional_info_label">Additional Information</string>
+    <string name="payjp_card_form_additional_info_required_at_least_one">Please enter at least one.</string>
 
     <string name="payjp_card_form_error_no_number">Please enter a card number.</string>
     <string name="payjp_card_form_error_invalid_number">Please enter a valid card number.</string>
