2文字以上45文字以内

--- a/payjp-android-cardform/src/main/res/values-ja/strings.xml
+++ b/payjp-android-cardform/src/main/res/values-ja/strings.xml
@@ -42,7 +42,7 @@
     <string name="payjp_card_form_error_invalid_cvc">正しいセキュリティコードを入力してください</string>
     <string name="payjp_card_form_error_no_holder_name">カード名義を入力してください</string>
     <string name="payjp_card_form_error_invalid_holder_name">カード名義に利用できない文字が含まれています</string>
-    <string name="payjp_card_form_error_too_long_holder_name">カード名義は45文字以内で入力してください</string>
+    <string name="payjp_card_form_error_invalid_length_holder_name">カード名義は2文字以上45文字以内で入力してください</string>
     <string name="payjp_card_form_error_no_email">メールアドレスを入力してください</string>
     <string name="payjp_card_form_error_no_phone_number">電話番号を入力してください</string>
     <string name="payjp_card_form_error_invalid_phone_number">正しい電話番号を入力してください</string>
